<resources>
    <string name="app_name">peAR</string>
    <string name="menu_share">Share</string>
    <string name="menu_more">More</string>
    <string name="offer">Flat 30% OFF on complete order</string>
    <string name="small_offer_text">Order Now. Apply Coupon Directly on Bill Payment.</string>
    <string name="add">Add</string>
    <string name="des">Example: Quick Bites in South Mumbai, Quick Bites in Tardeo, in Mumbai,</string>
    <string name="seller">Bestseller</string>
    <string name="customize">Customize</string>
    <string name="view3d">VIEW IN 3D</string>
</resources>