<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".Activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            app:subtitleTextColor="@color/black"
            app:theme="@style/ToolBarStyle"
            app:title="@string/app_name"
            app:titleTextColor="@color/black">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:background="@color/white"
                android:layout_marginBottom="@dimen/dp05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp10"
                    android:background="@drawable/flat_tag_shape"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_verified_24"></ImageView>

                    <TextView
                        style="@style/OfferText"
                        android:text="@string/offer"></TextView>

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCouponsList"
                    style="@style/RVstyle">

                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    style="@style/SmallOfferText"
                    android:text="@string/small_offer_text"></TextView>

            </LinearLayout>

        <LinearLayout

            android:background="@color/white"
            android:layout_marginBottom="@dimen/dp05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--            <include layout="@layout/recom_search_filter_layout"/>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRestaurantList"
                style="@style/RVstyle">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>